# ChangeLog for media-video/mplayer2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer2/ChangeLog,v 1.119 2014/05/01 20:17:09 maksbotan Exp $

  01 May 2014; Maxim Koltsov <maksbotan@gentoo.org>
  mplayer2-2.0_p20130428-r1.ebuild, mplayer2-9999.ebuild:
  Drop usage of base.eclass, bug #508128. Thanks to Nikoli.

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org>
  mplayer2-2.0_p20130428-r1.ebuild:
  Add ~mips keyword.

  23 Feb 2014; Markus Meier <maekke@gentoo.org>
  mplayer2-2.0_p20130428-r1.ebuild:
  arm stable, bug #499368

  29 Jan 2014; Gilles Dartiguelongue <eva@gentoo.org>
  mplayer2-2.0_p20130126.ebuild, mplayer2-2.0_p20130428-r1.ebuild,
  mplayer2-9999.ebuild:
  Restrict libquvi versions since 0.9 is not supported, bug #499512.

  27 Jan 2014; Jeroen Roovers <jer@gentoo.org>
  mplayer2-2.0_p20130428-r1.ebuild:
  Stable for HPPA (bug #499368).

  23 Jan 2014; Sven Vermeulen <swift@gentoo.org> mplayer2-2.0_p20130126.ebuild,
  mplayer2-2.0_p20130428-r1.ebuild, mplayer2-9999.ebuild:
  Adding USE=selinux dependency towards selinux-mplayer (SELinux policy), cfr
  bug 498578

  19 Oct 2013; Tom Wijsman <TomWij@gentoo.org> mplayer2-9999.ebuild:
  Added REQUIRED_USE entry as the libass USE flag now needs iconv to be enabled,
  proxied commit for Nikoli; fixes bug #488604, reported by adel_blakdeath.

  13 Oct 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Updated Nikoli's e-mail address for easier automatic assignment.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org>
  mplayer2-2.0_p20130428-r1.ebuild, mplayer2-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  mplayer2-2.0_p20130126.ebuild, mplayer2-2.0_p20130428-r1.ebuild,
  mplayer2-9999.ebuild:
  depend on ffmpeg:0

  10 Jul 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag descriptions from metadata.xml
