@@ -6,19 +6,21 @@ AUX mplayer2-2.0_p20120828-ffmpeg.patch 765 SHA256 2387daac56d711d4a7d32fc15f1b2
 AUX mplayer2-py2compat.patch 2179 SHA256 36e26a89ec03de0e349443ca3ce07c58e408e032200f49c3ce849691589a1cc7 SHA512 a90417c923c36c78d4c8053de89b26f69cd29a01ee37028360c8c564b903ee00ac0d7e98bcaf25220998951f25987cd89ede47b54518736c14abd1e7153e6568 WHIRLPOOL 987c63235be05fd3dbe89e4e291649c6f2176771e07c8515c08725a4e3d54118136b968531565a65c1e83bd754cc51e9bef5493ec2e653dfa4b3278c8bed6cce
 DIST mplayer2-2.0_p20130126.tar.xz 1914780 SHA256 ed68090e1ed2698132065ab4567e2920a6fb9f2f0868efc172f612d6848919f5 SHA512 b54780a0a45619ababf874fe40797a6c73c4adea26469178bbd5bf3396cd1977631622a8e150c02b650cf4a415d1e5d80943fda1e50935d921328022187b65dc WHIRLPOOL b1876eece2223d1b1281aeb1043c1f436c518363a2e720a2eb6be92853cac3ed0dce16b3c4300acffe4746925831ccfddcc24553d5fdcac4cce385701d5625bf
 DIST mplayer2-2.0_p20130428.tar.xz 1911464 SHA256 41e54e6c86761196e111250fd6db79161bfd08f2cccf7d624e9b25b038fdf6c0 SHA512 da0101736b76535d38b1063c3ec7054003c8013f24df949bac26d51deebb41fcb6116af35d3b49bd6d9c1cc76842ab58c8e049a42e70dc5694058e3e6ed44bd8 WHIRLPOOL f97620ec26483e498d21b75fb533d09e41542ca18bb6a5a535c40c33fad34f745966f10a001026766610b6e40754dcecab3dc6292c00532437d2a92cb8d21079
+DIST mplayer2-2.0_p20131009.tar.xz 1907780 SHA256 c105b3804d4d66af29015d4ecd46abbdff75c39d78d5457c535519ecc4d3855a SHA512 8c072bf8fa6a908d3c587e5f26daa6a07098abc8dabd20f77b172e8de5537125873ac1cfc8f07e5616eb0b35aaa73fbab2b30e94a057d220c481dae7740cb3e6 WHIRLPOOL f595c4032371239f1f31f6356d5c7d07534fc8227ba3f1e1452b507ac64baec0747c80b067eaed5fbdc58ee957875a39d9d782eed45b6d797d9a283a34496b78
 EBUILD mplayer2-2.0_p20130126.ebuild 11686 SHA256 9a56cd8eb35665a77423fde35a76c98cc2b091f9837376821fb2271bfb4d94bb SHA512 9be3e0cc59a7166a615cce848be8b09db375a813fe774d221dde9624f79d954f820de092d39248ab79d8703670bbdd072bf670fcca609443c809f098e2fadc54 WHIRLPOOL d3aa4cf4d5a2c48a969c46bbf3bedbde8952026c0f58466fa3ebed5c2e359ae1688c1243f43dc31d2c4d2b0c25f5781cf57df4ca6692a4b064dc2f4aee60b27e
 EBUILD mplayer2-2.0_p20130428-r1.ebuild 10360 SHA256 b7e1021fdbb83a1fbf3b48be3be61325fe040b24b5a062cfd4422ad7c8f4a70c SHA512 7a0a46abea3a6b9a1e292f074437db79bcc6151f123b7555304012f781248f80d54b9526de6b94438774416d51aa3ccc73e4994fabb6190ce4477d3dcc9e6a5d WHIRLPOOL 45c61da51c4f41905448a57abf7840abd6be1dff8d7b2d0b8ed7d2a0a4f6160377edf970c7c937ad5f636f1b23a49be80d5159f66048bdfb3ce8f2927bced3ec
+EBUILD mplayer2-2.0_p20131009.ebuild 10351 SHA256 ab3f03237d0268c81f066262d45db7f9404e0ba37ff9e72fd9ba992d73cff161 SHA512 fa292d63be6e57d8dffcb0687d403d521bf02fb3ac5b1a80591bd37782e89b13af514f6bdeddbc9e3e80673a11ae9bf72ded8c539f1d5c2dc364726691746330 WHIRLPOOL 0dbb2387a9cd6a63b67bb3c80af56f6051f722a11a09c3490c9c0296d4fd0885cacdcab3f2cf7ba707685a26ee3217ba234059c4e53c368cc2fba4a412c13f6b
 EBUILD mplayer2-9999.ebuild 10345 SHA256 4a2615e1d763bcbd2a95eb4b1f8840fd715ee425563c2ec047d6ce14b394c6ba SHA512 4f18140f68b92de96159e6844b8fd71ccf06d1bc110fe53608c72039822d6f9e67a7f6fa4943e1aca58c772d104ab4f21f3274a254781c3bfedc0a4a3c71f95f WHIRLPOOL 14ac5085fd2af8f0e65d15d069534e0a2bcf87cad0f0ad9b175d9e7c35874a9aa2fae31b946354352e432f579c8c58c65fc4a534571a12c3b7d97b8aaf66c970
-MISC ChangeLog 22247 SHA256 54c12f090b90b95585d667abb5b0544f6b1b322ddb21db0307fa7c725b28c92f SHA512 4343697230af43bc9e3b64dbf6549a00c13ce52636874fe81b7e348f9e24af1800361c6906d526ca3eecc89d158d72489477d3c582e4a41fa2d1ede6bcb722e9 WHIRLPOOL a0328fbf1bac53b99ef8dd1455cbc6b15dcc89ae3528fbfd676c818148e00f2fa69bf52b0e5d083b518d8170bf5fb5a4c797410e1ef802f68ca84257fc2a54d1
+MISC ChangeLog 22475 SHA256 a4d5b7965c314f2ba9026c395ec54f084f47361e1ab1929d48079de623dd09d2 SHA512 853a23dcc64c09a950094d83e15508a5a60ea46fc69c72609d9f6a7e8d0ff960d1c165b5ed99b56a741f4c7e2f6881b69279195b5f57dd7988e4c2c45a152088 WHIRLPOOL 0d077e3332de35e5a2b5c431fbe89880929c5d93eeefe01e979c06245eeab48fcf03d7ac2cc60bb250c7ec4877b989af086f60def217a96986d8d8d6a841cef2
 MISC metadata.xml 3147 SHA256 b59a051d61995b8e8f565110f91005df45b271b19f55f12e873160189d523ed9 SHA512 88338f85b67efc54241fb4d6bb91883ee337fcabac184bf7cac2cb971e81bc53fd9bd9fbec1c71a2353ab5f5263218fc673d58f45642a42e9934dcf8240e9c11 WHIRLPOOL 98da9689a06cad004f9056e31766771bdd62274c05ad9334144845ea2be378197343e87c86debec08c6beaff027f82534792b3b76ae444ce7aa3eb2b4dca2cb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTYqu9AAoJEAmJmMX429rerQoIAK+WfWx4YEEmNbHiZwK7TWsM
-odCvBMdmfx92YZ8n0kMNbULtFgkdjBX5KKiCArehuSC3vp8nNzae3xXEWSZC91ua
-DgZPTgr6CQn78iT692zqppxMLJxmcVNTM1ftE/kM949Kcno9Dl15DOi4Ff1h/8Ce
-195mqIAK+7lQPvqHVfqWiSawLGMgJia+bZv2lgb4TpPfEfOrvMVSIHcbECoJJs+c
-JwZuA4PL7yZ0IwxVXgRTk1t2e//ncFbbTzwSEiaTe+Y5mIx0kU33LGhy+mtKA0Ak
-drgw13aGtYwjyBsKCK21x7vPq4ZeMkECs621EUu7evNSfFkSlnMmsujrcMMwhmY=
-=/HeZ
+iQEcBAEBCAAGBQJTY/HcAAoJEAmJmMX429reG3IH/2jsaWmnjicAzQsdCduSMnQ/
+VD2CFmeEt+WX5IlPC+EhoxNEVOQbQhJoEpk+YqPlK9XvAXwNYB6/PL/fx8UFRAeT
+f/xxv9UC5/Jb2Qx7wYTQqOZlBZ0xQTY1Xlip0YCTbCN5I5a+jbqKMOv/cEyqZTQ2
+kpzywxOZWuQsiWYj9gdkXotKs9GV5LKspQ4ccvuJDpkkBlzDuPW2Z3UB2eqIC16Z
+3z3SQzgBw+U9wVXMYfVfkKj7FKdeT9ol4XrqfrIBUwihNfnetmrhK3TtLwfTewQO
+UjAZaq5niIgBeuQee8kBPgLuve5arj9tyOl/vZ4CmG5xhg00tZnogA+5VNC/0Lk=
+=8OiB
 -----END PGP SIGNATURE-----
