@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup
+DEPEND=sys-libs/ncurses sys-libs/zlib X? ( x11-libs/libXext x11-libs/libXxf86vm opengl? ( virtual/opengl ) lcms? ( media-libs/lcms:2 ) vdpau? ( x11-libs/libvdpau ) xinerama? ( x11-libs/libXinerama ) xscreensaver? ( x11-libs/libXScrnSaver ) xv? ( x11-libs/libXv ) ) alsa? ( media-libs/alsa-lib ) bluray? ( media-libs/libbluray ) bs2b? ( media-libs/libbs2b ) cdio? ( || ( dev-libs/libcdio-paranoia <dev-libs/libcdio-0.90[-minimal] ) ) directfb? ( dev-libs/DirectFB ) dvb? ( virtual/linuxtv-dvb-headers ) dvd? ( >=media-libs/libdvdread-4.1.3 dvdnav? ( >=media-libs/libdvdnav-4.1.3 ) ) enca? ( app-i18n/enca ) gif? ( media-libs/giflib ) iconv? ( virtual/libiconv ) jack? ( media-sound/jack-audio-connection-kit ) jpeg? ( virtual/jpeg ) ladspa? ( media-libs/ladspa-sdk ) libass? ( >=media-libs/libass-0.9.10[enca?,fontconfig] virtual/ttf-fonts ) libcaca? ( media-libs/libcaca ) lirc? ( app-misc/lirc ) mng? ( media-libs/libmng ) mp3? ( media-sound/mpg123 ) png? ( media-libs/libpng ) pnm? ( media-libs/netpbm ) portaudio? ( >=media-libs/portaudio-19_pre20111121 ) postproc? ( || ( media-libs/libpostproc media-video/ffmpeg:0 ) ) pulseaudio? ( media-sound/pulseaudio ) quvi? ( >=media-libs/libquvi-0.4.1 <media-libs/libquvi-0.9 ) samba? ( net-fs/samba ) selinux? ( sec-policy/selinux-mplayer ) >=virtual/ffmpeg-9[threads?,vdpau?] symlink? ( !media-video/mplayer ) virtual/pkgconfig || ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-3.3.2-r2:3.3 >=dev-lang/python-3.2.5-r2:3.2 ) dev-python/docutils X? ( x11-proto/videoproto x11-proto/xf86vidmodeproto xinerama? ( x11-proto/xineramaproto ) xscreensaver? ( x11-proto/scrnsaverproto ) ) doc? ( dev-libs/libxslt app-text/docbook-xml-dtd app-text/docbook-xsl-stylesheets )
+DESCRIPTION=Media Player for Linux
+EAPI=5
+HOMEPAGE=http://www.mplayer2.org/
+IUSE=+alsa aqua bluray bs2b cddb +cdio cpudetection debug directfb doc dvb +dvd +dvdnav +enca ftp gif +iconv ipv6 jack joystick jpeg ladspa lcms +libass libcaca lirc md5sum mng +mp3 +network +opengl oss png pnm portaudio +postproc pulseaudio pvr +quvi radio samba selinux +shm tga +threads +unicode v4l vcd vdpau +X xinerama +xscreensaver +xv yuv4mpeg symlink 3dnow 3dnowext altivec +mmx mmxext sse sse2 ssse3
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux
+LICENSE=GPL-3
+RDEPEND=sys-libs/ncurses sys-libs/zlib X? ( x11-libs/libXext x11-libs/libXxf86vm opengl? ( virtual/opengl ) lcms? ( media-libs/lcms:2 ) vdpau? ( x11-libs/libvdpau ) xinerama? ( x11-libs/libXinerama ) xscreensaver? ( x11-libs/libXScrnSaver ) xv? ( x11-libs/libXv ) ) alsa? ( media-libs/alsa-lib ) bluray? ( media-libs/libbluray ) bs2b? ( media-libs/libbs2b ) cdio? ( || ( dev-libs/libcdio-paranoia <dev-libs/libcdio-0.90[-minimal] ) ) directfb? ( dev-libs/DirectFB ) dvb? ( virtual/linuxtv-dvb-headers ) dvd? ( >=media-libs/libdvdread-4.1.3 dvdnav? ( >=media-libs/libdvdnav-4.1.3 ) ) enca? ( app-i18n/enca ) gif? ( media-libs/giflib ) iconv? ( virtual/libiconv ) jack? ( media-sound/jack-audio-connection-kit ) jpeg? ( virtual/jpeg ) ladspa? ( media-libs/ladspa-sdk ) libass? ( >=media-libs/libass-0.9.10[enca?,fontconfig] virtual/ttf-fonts ) libcaca? ( media-libs/libcaca ) lirc? ( app-misc/lirc ) mng? ( media-libs/libmng ) mp3? ( media-sound/mpg123 ) png? ( media-libs/libpng ) pnm? ( media-libs/netpbm ) portaudio? ( >=media-libs/portaudio-19_pre20111121 ) postproc? ( || ( media-libs/libpostproc media-video/ffmpeg:0 ) ) pulseaudio? ( media-sound/pulseaudio ) quvi? ( >=media-libs/libquvi-0.4.1 <media-libs/libquvi-0.9 ) samba? ( net-fs/samba ) selinux? ( sec-policy/selinux-mplayer ) >=virtual/ffmpeg-9[threads?,vdpau?] symlink? ( !media-video/mplayer )
+REQUIRED_USE=cddb? ( cdio network ) dvdnav? ( dvd ) enca? ( iconv ) lcms? ( opengl ) libass? ( iconv ) opengl? ( || ( aqua X ) ) portaudio? ( threads ) pvr? ( v4l ) radio? ( v4l || ( alsa oss ) ) v4l? ( threads ) vdpau? ( X ) xinerama? ( X ) xscreensaver? ( X ) xv? ( X )
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~maksbotan/mplayer2-2.0_p20131009.tar.xz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	python-any-r1	4560effd96d3d2a82e50af7cf87166da	python-utils-r1	52284f64cfc64a6d70bc00a9f5a01c6f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=9622dab9ff6d907f8c02c1f751e76c7c
